--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,7 @@
   "bitwise"       : true,     // true: Prohibit bitwise operators (&, |, ^, etc.)
   "camelcase"     : true,     // true: Identifiers must be in camelCase
   "curly"         : true,     // true: Require {} for every new block or scope
-  "eqeqeq"        : false,    // true: Require triple equals (===) for comparison
+  "eqeqeq"        : true,     // true: Require triple equals (===) for comparison
   "forin"         : true,     // true: Require filtering for..in loops with obj.hasOwnProperty()
   "freeze"        : true,     // true: prohibits overwriting prototypes of native objects such as Array, Date etc.
   "immed"         : true,     // true: Require immediate invocations to be wrapped in parens e.g. `(function () { } ());`
@@ -39,7 +39,7 @@
   "asi"           : false,     // true: Tolerate Automatic Semicolon Insertion (no semicolons)
   "boss"          : false,     // true: Tolerate assignments where comparisons would be expected
   "debug"         : false,     // true: Allow debugger statements e.g. browser breakpoints.
-  "eqnull"        : false,     // true: Tolerate use of `== null`
+  "eqnull"        : true,      // true: Tolerate use of `== null`
   "esversion"     : 5,         // {int} Specify the ECMAScript version to which the code must adhere.
   "moz"           : false,     // true: Allow Mozilla specific syntax (extends and overrides esnext features)
   // (ex: `for each`, multiple try/catch, function expression…)
