--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "version": "1.0.0",
   "description": "AdRem Software JavaScript Tutorials",
   "scripts": {
-    "tutorial1": "node ./src/tutorial1.js",
-    "tutorial1-inspect": "node --inspect-brk ./src/tutorial1.js",
-    "tutorial2": "node ./src/tutorial2.js",
-    "tutorial2-inspect": "node --inspect-brk ./src/tutorial2.js",
-    "install-prod-modules": "yarn install --production --pure-lockfile",
-    "install-modules": "yarn install --pure-lockfile"
+    "primitives": "node \"./src/1. Primitives/primitives.js\"",
+    "functions": "node \"./src/2. Functions/functions.js\"",
+    "functionalProcessing": "node \"./src/3. Functional processing/functionalProcessing.js\"",
+    "asyncTasks": "node \"./src/4. Async tasks/asyncTasks.js\"",
+    "prototypes": "node \"./src/5. Prototypes/usage.js\""
   },
   "repository": {
     "type": "git"
